PolyXpress/logfiles/nodeLog20160705.51.43.txt
mhlog: [Tue Jul 05 2016 21:49:55 GMT-0700 (PDT)] Message: Running locally

/Users/dcreel121/Thesis3/PolyXpress/models/polyXpressMessageModels.js:23
	});
	 ^
SyntaxError: Unexpected token )
    at Module._compile (module.js:439:25)
    at Object.Module._extensions..js (module.js:474:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:312:12)
    at Module.require (module.js:364:17)
    at require (module.js:380:17)
    at Object.<anonymous> (/Users/dcreel121/Thesis3/PolyXpress/app.js:41:23)
    at Module._compile (module.js:456:26)
    at Object.Module._extensions..js (module.js:474:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:312:12)
    at Function.Module.runMain (module.js:497:10)
    at startup (node.js:119:16)
    at node.js:929:3
